--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,23 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 buildscript {
     ext {
-        compose_version = '1.2.1'
-        compose_compiler_version = '1.3.1'
+        compose_version = '1.6.5'
+        compose_compiler_version = '1.5.11'
     }
 }
 
 plugins {
-    id 'com.android.application' version '7.2.2' apply false
-    id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
-    id 'com.google.dagger.hilt.android' version '2.44' apply false
+    id 'com.android.application' version '8.3.2' apply false
+    id 'com.android.library' version '8.3.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.23' apply false
+    id 'com.google.dagger.hilt.android' version '2.51.1' apply false
+}
+
+subprojects {
+    tasks.withType(KotlinCompile) {
+        kotlinOptions.jvmTarget = "1.8"
+    }
 }
 
 task clean(type: Delete) {
