--- a/notification-scheduler/build.gradle
+++ b/notification-scheduler/build.gradle
@@ -41,8 +41,9 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:2.9.0"
     implementation 'androidx.test:monitor:1.6.1'
     implementation 'androidx.test.ext:junit-ktx:1.1.5'
+    implementation 'androidx.compose.ui:ui-android:1.6.6'
     androidTestImplementation 'junit:junit:4.13.2'
 
-    kapt("com.google.dagger:dagger-compiler:2.51")
-    implementation("com.google.dagger:dagger:2.51")
+    kapt("com.google.dagger:dagger-compiler:2.51.1")
+    implementation("com.google.dagger:dagger:2.51.1")
 }
